add secure auth,  but do not work cors